--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ crossterm = "0.28"
 terminput = "0.4"
 terminput-crossterm = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
+which = "8.0.0"
