--- a/typeypipe/Cargo.toml
+++ b/typeypipe/Cargo.toml
@@ -7,7 +7,7 @@ description = "A transparent shell wrapper with asynchronous messaging capabilit
 license = "MIT"
 repository = "https://github.com/typeypipe/typeypipe"
 homepage = "https://typeypipe.dev"
-include = ["src/**/*", "assets/layouts/*", "assets/config/*", "LICENSE.md", "README.md", "!**/*_test.*", "!**/tests/**/*"]
+include = ["src/**/*", "LICENSE.md", "README.md", "!**/*_test.*", "!**/tests/**/*"]
 # NOTE: When updating this, modify `channel` in `rust-toolchain.toml` accordingly
 rust-version = "1.84"
 
@@ -19,22 +19,12 @@ zellij-server = { path = "zellij-server/", version = "0.44.0" }
 zellij-utils = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
-dialoguer = { version = "0.10.4", default-features = false }
-humantime = { workspace = true }
-interprocess = { workspace = true }
 log = { workspace = true }
 miette = { workspace = true }
-names = { workspace = true }
 nix = { workspace = true }
-suggest = { workspace = true }
 thiserror = { workspace = true }
-isahc = { workspace = true }
 
 [dev-dependencies]
-insta = { version = "1.6.0", features = ["backtrace"] }
-ssh2 = "0.9.1"
-rand = "0.8.0"
-regex = "1.8.1"
 vte = { workspace = true }
 
 [workspace]
@@ -42,7 +32,6 @@ members = [
     "zellij-client",
     "zellij-server",
     "zellij-utils",
-    "xtask",
     ".",
 ]
 
@@ -59,16 +48,14 @@ lazy_static = { version = "1.4.0", default-features = false }
 libc = { version = "0.2", default-features = false, features = ["std"] }
 log = { version = "0.4.17", default-features = false }
 miette = { version = "5.7.0", default-features = false, features = ["fancy"] }
+names = { version = "0.14.0", default-features = false }
 nix = { version = "0.23.1", default-features = false }
-notify-debouncer-full = { version = "0.3.1", default-features = false }
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
-prost = { version = "0.11.9", default-features = false, features = ["std", "prost-derive"] }
 regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
+rmp-serde = { version = "1.1.0", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
 serde_json = { version = "1.0", default-features = false, features = ["std"] }
 signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
-strum = { version = "0.20.0", default-features = false }
-strum_macros = { version = "0.20.0", default-features = false }
 suggest = { version = "0.4.0", default-features = false }
 tempfile = { version = "3.2.0", default-features = false }
 termwiz = { version = "0.23.2", default-features = false }
@@ -79,10 +66,6 @@ unicode-width = { version = "0.1.8", default-features = false }
 url = { version = "2.2.2", default-features = false, features = ["serde"] }
 uuid = { version = "1.4.1", default-features = false, features = ["serde", "v4", "std"] }
 vte = { version = "0.11.0", default-features = false }
-names = { version = "0.14.0", default-features = false }
-include_dir = { version = "0.7.3", default-features = false }
-rmp-serde = { version = "1.1.0", default-features = false }
-sha2 = { version = "0.10", default-features = false }
 zellij-utils = { path = "zellij-utils/", version = "0.44.0" }
 
 [profile.dev-opt]
@@ -99,15 +82,8 @@ strip = true
 depends = "$auto"
 license-file = ["LICENSE.md", "4"]
 assets = [
-  ["assets/man/zellij.1", "usr/share/man/man1/zellij.1", "644"],
-  ["target/release/zellij", "usr/bin/zellij", "755"],
-  ["GOVERNANCE.md", "usr/share/doc/zellij/GOVERNANCE.md", "644"],
-  ["README.md", "usr/share/doc/zellij/README.md", "644"],
-  ["assets/layouts/*", "usr/share/zellij/layouts/", "644"],
-
-  ["assets/completions/zellij.bash", "usr/share/bash-completion/completions/zellij.bash", "644"],
-  ["assets/completions/zellij.fish", "usr/share/fish/vendor_completions.d/zellij.fish", "644"],
-  ["assets/completions/_zellij", "usr/share/zsh/vendor-completions/_zellij", "644"],
+  ["target/release/typey-pipe", "usr/bin/typey-pipe", "755"],
+  ["README.md", "usr/share/doc/typey-pipe/README.md", "644"],
 ]
 
 [package.metadata.binstall]
@@ -115,10 +91,11 @@ pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
 bin-dir = "{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
+[[bin]]
+name = "typey-pipe"
+path = "src/main.rs"
+
 [features]
-default = ["vendored_curl"]
-disable_automatic_asset_installation = ["zellij-utils/disable_automatic_asset_installation"]
-vendored_curl = ["zellij-utils/vendored_curl"]
-unstable = ["zellij-client/unstable", "zellij-utils/unstable"]
+default = []
 
 
